infra/k8s/security/envoy-bouncer/referencegrant.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-bouncer
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: kube-system
  to:
    - group: ""
      kind: Service
      name: envoy-bouncer
